# translator

./: .gitignore  README.md  docker-compose.yml  pubspec.yaml  setup.sh
.github/: pull_request_template.md
.github/workflows/: traslator_ci.yml
android/app/: build.gradle.kts
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/config/: env_config.dart
lib/core/constants/: app_constants.dart
lib/core/errors/: app_exceptions.dart
lib/core/services/: backend_api_service.dart  clipboard_service.dart  dynamic_language_learning_service.dart  enhanced_tts_service.dart  error_handler_service.dart  language_service.dart  local_translation_service.dart  share_service.dart  text_to_speech_service.dart
lib/core/theme/: responsive_theme.dart
lib/data/datasources/: translation_hybrid_data_source.dart  translation_local_data_source.dart  translation_remote_data_source.dart
lib/data/models/: translation_model.dart
lib/domain/repositories/: translation_repository.dart  translation_repository_impl.dart
lib/domain/usecases/: translate_text_usecase.dart
lib/presentation/bloc/: translation_bloc.dart  translation_event.dart  translation_state.dart
lib/presentation/pages/: language_learning_page.dart  model_management_page.dart  translator_page.dart
lib/presentation/widgets/: enhanced_language_dialog.dart  language_dropdown.dart  language_selection_row.dart  source_text_input.dart
test/: widget_test.dart
(+1 files in other folders)
